@@ -1,0 +1,24 @@
+[
+    {
+        "mob": "minecraft:zombie",
+        "nbt": {
+            "IsBaby": false
+        },
+        "result": "default"
+    },
+    
+    {
+        "mob": "minecraft:phantom",
+        "biome": [
+            "minecraft:end_highlands",
+            "minecraft:end_midlands",
+            "minecraft:end_barrens",
+            "minecraft:small_end_islands"
+        ],
+        "result": "allow"
+    },
+    {
+        "mob": "minecraft:phantom",
+        "result": "deny"
+    }
+]
