@@ -15,9 +15,12 @@
 -= Changes =-
 - Updated in game Guidebook
 - Changed the anvil to be made from 7 cast iron ingots in an I pattern
+- Changed phantoms to spawn in the end, and disabled insomnia, preventing phantoms from spawning fron not sleeping
 
 -= Removals =-
 - Removed the Honeyed Apple from Buzzier Bees as it overlapped the one from Create
+- Zombies will no longer spawn reinforcements when attacked
+- Baby zombies will no longer spawn at all
 
 -= Bugfixes =-
 - Fixed an issue where JourneyMap Integrations was trying to integrate with FTBChunks when FTBChunks is not present
